- Allow perfume amounts to be specified as percentages
- Adjustable chance for max one HP units to be destroyed by nuclear strikes
  - Controlled by config option chance_for_nukes_to_destroy_max_one_hp_units
- Add limited_railroads_work_like_fast_roads option which does just that

* RELEASE 20
- Remove city improvement limit
  - Controlled by config option remove_city_improvement_limit
- Polish precision striking by cruise missiles
  - Now plays the correct animations and despawns the unit afterward
  - Controlled by the polish_precision_striking config option, which used to be named polish_non_air_precision_striking
- Enable cruise missiles to perform stealth attack bombard
- Add ability to perfume technologies and governments
  - Options named technology_perfume and government_perfume, respectively
  - The perfume_specs option from before has been renamed to production_perfume but the old name still works as an alias
- Fix bug related to "Disables Diseases From Flood Plains" tech flag
  - Option named patch_disease_stopping_tech_flag_bug, off by default b/c this fix causes a lot more disease under the standard rules
- Option to show unit hitpoints on the stealth attack target selection popup (named show_hp_of_stealth_attack_options in config)
- Option to have a warning when the building you've selected to build would replace another already built in the city
  - Named warn_when_chosen_building_would_replace_another in config, off by default
- Option to prevent stealth attacks from targeting units that are invisible and unrevealed (named exclude_invisible_units_from_stealth_attack)
- Display negative yields from generated resources
- Option to show more strategic resources (up to 13) in the box on the top left of the city screen by packing them in more tightly
  - Named compact_strategic_resource_display_on_city_screen, off by default
- Option to make planting forests produce LM forest terrain (named convert_to_landmark_after_planting_forest)