@@ -209,6 +209,7 @@ struct c3x_config {
 	bool exclude_invisible_units_from_stealth_attack;
 	bool convert_to_landmark_after_planting_forest;
 	int chance_for_nukes_to_destroy_max_one_hp_units;
+	bool allow_sale_of_aqueducts_and_hospitals;
 
 	bool enable_trade_net_x;
 	bool optimize_improvement_loops;
