@@ -577,3 +577,7 @@ convert_to_landmark_after_planting_forest = false
 ; This option specifies how likely it is (in percent) for a combat land or sea unit with a maximum of one HP to be destroyed when struck by a
 ; nuke. Set to 100 for base game behavior.
 chance_for_nukes_to_destroy_max_one_hp_units = 100
+
+; Allows you to sell aqueducts and hospitals as well as any modded buildings that uncap population growth. A city must be below the pop cap for a sale
+; to be allowed, i.e., under the standard rules, aqueducts may only be sold in cities of pop <= 6 and for hospitals pop <= 12.
+allow_sale_of_aqueducts_and_hospitals = true
